--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <h1 class="título"> Cadeias de Abastecimento</h1>
     <ul>
         <li class="páginas"> <a href="o-que-é.htlm"> o que é</a></li>
-        
+
     </ul>
+    </section>
 </body>
 </html>
