--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <section>
     <h1 class="título"> Cadeias de Abastecimento</h1>
     <ul>
-        <li class="páginas"> <a href="o-que-é.htlm"> o que é</a></li>
+        <li class="link"> <a href="o-que-é.htlm"> o que é</a></li>
+        <li class="link"> <a href="o-que-é.htlm"> o que é</a></li>
+        <li class="link"> <a href="o-que-é.htlm"> o que é</a></li>
+        <li class="link"> <a href="o-que-é.htlm"> o que é</a></li>
 
     </ul>
     </section>
