--- a/o-que-é.html
+++ b/o-que-é.html
@@ -6,7 +6,10 @@
     <title>Cadeias de Abastecimento</title>
     <link rel="stylesheet" href="o-que-é.css">
 </head>
-<body class="corpo"> 
+<body class="corpo">
+
     <h1 class="título"> O Que É A Cadeia De Abastecimento?</h1>
+    <p class="Não é apenas uma série de transações logísticas, mas sim uma tapeçaria intricada que liga fazendas a famílias, agricultores a consumidores."></p>
+    <h2 class="Quais são os processos da cadeia de abastecimento?"
 </body>
 </html>
