--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Cadeias de Abastecimento Locais</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="corpo"
+<body class="corpo">
     <section>
     <h1 class="título"> Cadeias de Abastecimento</h1>
     <ul>
