--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 class="título"> Cadeias de Abastecimento</h1>
     <ul>
         <li class="link"> <a href="o-que-é.htlm"> o que é</a></li>
-        <li class="link"> <a href="o-que-é.htlm"> o que é</a></li>
+        <li class="link"> <a href="funcionamento.htlm"> Como funciona</a></li>
         <li class="link"> <a href="o-que-é.htlm"> o que é</a></li>
         <li class="link"> <a href="o-que-é.htlm"> o que é</a></li>
 
