--- a/o-que-é.html
+++ b/o-que-é.html
@@ -8,8 +8,8 @@
 </head>
 <body class="corpo">
 
-    <h1 class="título"> O Que É A Cadeia De Abastecimento?</h1>
-    <p class="Não é apenas uma série de transações logísticas, mas sim uma tapeçaria intricada que liga fazendas a famílias, agricultores a consumidores."></p>
-    <h2 class="Quais são os processos da cadeia de abastecimento?"
+    <h1 class="título"> O Que São Cadeias Produtivas?</h1>
+    <p class="Definição"> Cadeia produtiva  do agronegócio pode ser definida como todos os processos que ocorrem desde os insumos básicoa até a transformação no produto final. Ou seja, envolve todas as etapas que o insumo sofre até se tornar um produto.</p>
+    <h2 class="Definição">Com a globalização e o constante avanço da tecnologia, esse conceito está sempre evoluindo. Cada vez mais, as cadeias tem se transformado em uma grande rede de negócios e cooperações. O objetivo dessa rede é fazer com que os parceiros trabalhem em conjunto.</h2>
 </body>
 </html>
