--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="corpo">
     <section>
-    <h1 class="título"> Cadeias de Abastecimento</h1>
+    <h1 class="título"> Cadeias Produtivas do Agronegócio</h1>
     <ul>
         <li class="link"> <a href="o-que-é.htlm"> o que é</a></li>
         <li class="link"> <a href="funcionamento.htlm"> Como funciona</a></li>
