--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <section>
     <h1 class="título"> Cadeias Produtivas do Agronegócio</h1>
     <ul>
-        <li class="link"> <a href="o-que-é.htlm"> o que é</a></li>
-        <li class="link"> <a href="funcionamento.htlm"> Como funciona</a></li>
+        <li class="link"> <a href="o-que-é.html"> o que é</a></li>
+        <li class="link"> <a href="funcionamento.html"> Como funciona</a></li>
         <li class="link"> <a href="o-que-é.htlm"> o que é</a></li>
         <li class="link"> <a href="o-que-é.htlm"> o que é</a></li>
 
