--- a/o-que-é.html
+++ b/o-que-é.html
@@ -9,7 +9,7 @@
 <body class="corpo">
 
     <h1 class="título"> O Que São Cadeias Produtivas?</h1>
-    <p class="parágrafo"> Cadeia produtiva  do agronegócio pode ser definida como todos os processos que ocorrem desde os insumos básicoa até a transformação no produto final. Ou seja, envolve todas as etapas que o insumo sofre até se tornar um produto.</p>
-    <h2 class="parágrafo">Com a globalização e o constante avanço da tecnologia, esse conceito está sempre evoluindo. Cada vez mais, as cadeias tem se transformado em uma grande rede de negócios e cooperações. O objetivo dessa rede é fazer com que os parceiros trabalhem em conjunto.</h2>
+    <p class="parágrafo"> Cadeia produtiva  do agronegócio pode ser definida como todos os processos que ocorrem desde os insumos básicoa até a transformação no produto final. Ou seja, envolve todas as etapas que o insumo sofre até se tornar um produto.
+    Com a globalização e o constante avanço da tecnologia, esse conceito está sempre evoluindo. Cada vez mais, as cadeias tem se transformado em uma grande rede de negócios e cooperações. O objetivo dessa rede é fazer com que os parceiros trabalhem em conjunto.</p>
 </body>
 </html>
