--- a/index.html
+++ b/index.html
@@ -10,12 +10,23 @@
     <section>
     <h1 class="título"> Cadeias Produtivas do Agronegócio</h1>
     <ul>
-        <li class="link"> <a href="o-que-é.html"> o que é</a></li>
         <li class="link"> <a href="funcionamento.html"> Como funciona</a></li>
         <li class="link"> <a href="o-que-é.htlm"> o que é</a></li>
         <li class="link"> <a href="o-que-é.htlm"> o que é</a></li>
 
     </ul>
+
+    <br>
+   
+    <h1 class="título"> O Que São Cadeias Produtivas?</h1>
+    <p class="parágrafo"> 
+        Cadeia produtiva  do agronegócio pode ser definida como todos os processos que ocorrem
+        desde os insumos básicoa até a transformação no produto final. Ou seja, envolve todas as
+        etapas que o insumo sofre até se tornar um produto.
+        Com a globalização e o constante avanço da tecnologia, esse conceito está sempre evoluindo. 
+        Cada vez mais, as cadeias tem se transformado em uma grande rede de negócios e cooperações. 
+        O objetivo dessa rede é fazer com que os parceiros trabalhem em conjunto.</p>
+</body>
     </section>
 </body>
 </html>
