--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="corpo">
     <header class="cabecalho">
     <h1 class="título"> Cadeias Produtivas do Agronegócio</h1>
-   <img src="imagem/mato.png">
+   <img class="imagem" src="imagem/mato.png">
     <ul>
         <li class="link"> <a href="funcionamento.html"> Como funciona</a></li>
         <li class="link"> <a href="o-que-é.htlm"> o que é</a></li>
